# ggl

./: Cargo.toml
assets/shaders/: billboard_textured.vert  default_unlit.frag  default_unlit.vert  lit-textured.frag  lit-untextured.frag  lit-untextured.vert  simple.frag  simple.vert  textured.vert
src/: TODO.md  app.rs  asset_loader.rs  camera.rs  component.rs  ecs.rs  egui_drawable.rs  entity.rs  gl.rs  input.rs  light.rs  light_system.rs  main.rs  mesh.rs  model.rs  obj_loader.rs  scene.rs  shader.rs  shader_loader.rs  texture.rs  transform.rs
src/loaders/: mod.rs  obj_loader.rs  shader_loader.rs  texture_loader.rs
src/renderer/: material.rs  mod.rs  renderer.rs
src/ui/: app_ui.rs  mod.rs
