[package]
name = "ggl"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

# for the winit integration:
# enable cut/copy/paste to os clipboard.
# if disabled a clipboard will be simulated so you can still copy/paste within the egui app.
clipboard = ["egui-winit?/clipboard"]

# for the winit integration:
# enable opening links in a browser when an egui hyperlink is clicked.
links = ["egui-winit?/links"]

# experimental support for a screen reader.
screen_reader = ["egui-winit?/screen_reader"]

# enable profiling with the puffin crate: https://github.com/embarkstudios/puffin
puffin = ["dep:puffin", "egui-winit?/puffin"]

# enable winit integration.
winit = ["egui-winit",]


[dependencies]
egui = { version = "0.18.1", features = ["default_fonts", "persistence"] }

bytemuck = "1.7"
glow = "0.11"

memoffset = "0.6"
tracing = "0.1"
nalgebra-glm  = "*"

glutin = "0.28.0" # examples/pure_glow
egui_glow = { version = "0.18.1", features = ["winit"]  }
image = "*"

egui-gizmo = "0.7.0"
serde = "1"
serde_json = "*"

obj = "0.10.2"
itertools = "*"
byteorder = "1.4.3"

bevy_ecs = "0.8.1"

# Native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.18.0" , optional = true}
puffin = { version = "0.13", optional = true }

# Web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = { version = "0.2" }
